@@ -59,6 +59,7 @@
 	- fix: handle file:///var/lib/rpm in %_dbpath correctly.
 	- update to file-4.16 internal.
 	- add access(2) run-time probe dependencies.
+	- eliminate --nogpg and --nopgp, use --nosignature instead.
 
 4.4.1 -> 4.4.2:
 	- start 4.4.2 devel.
